SEO Meta Tags ve son Schema duzeltmeleri

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mustafa Enes Kayacı | Main Hub</title>
+
+    <!-- Meta Tags for SEO and Social Media -->
+    <meta name="description" content="Mustafa Enes Kayacı is an AI Engineer, Researcher, and Founder of Raw Logic Labs. Building the next generation of On-Device AI solutions." />
+    <meta property="og:title" content="Mustafa Enes Kayacı | AI Engineer & Researcher" />
+    <meta property="og:description" content="Founder of Raw Logic Labs. Exploring the frontiers of AI and Education." />
+    <meta property="og:image" content="https://enesy.online/components/profile.jpg" />
+    <meta property="og:url" content="https://enesy.online" />
+    <meta property="og:type" content="profile" />
+    <meta name="twitter:card" content="summary_large_image">
     
     <!-- Structured Data (JSON-LD) for Knowledge Panel -->
     <script type="application/ld+json">
