Added Raw Logic Showcase section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </a>
 
             <!-- 5. Raw Logic Labs (Formerly Cortex App) -->
-            <a href="bookmarking.html" class="col-span-1 md:col-span-1 row-span-2 group p-0 overflow-hidden rounded-[32px] border border-glass-border relative opacity-0 animate-fade-up delay-300 block bg-glass-surface">
+            <a href="https://mustafaenes123.github.io/raw_logic_labs_website/" target="_blank" class="col-span-1 md:col-span-1 row-span-2 group p-0 overflow-hidden rounded-[32px] border border-glass-border relative opacity-0 animate-fade-up delay-300 block bg-glass-surface">
                 <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?q=80&w=800&auto=format&fit=crop" alt="Raw Logic Labs" class="absolute inset-0 w-full h-full object-cover opacity-60 grayscale group-hover:grayscale-0 transition-all duration-700 group-hover:scale-110" />
                 <div class="absolute inset-0 bg-gradient-to-b from-transparent to-charcoal/90 p-6 flex flex-col justify-end">
                     <span class="text-[10px] font-bold text-gold uppercase tracking-[0.2em] mb-2 border-b border-white/10 pb-2 w-fit">Founder & AI Engineer</span>
